--- a/404.html
+++ b/404.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="./src/Theodore.css" />
     <title>Theodore - 404</title>
   </head>
   <body>
     <div class="nopage">
       <h1>404</h1>
-      <h5><strong>We appear to have encountered a problem.</strong></h5>
-      <p></p>
+      <h5><strong>This page could not be found.</strong></h5>
+      <p><strong>Cutie :3</strong></p>
     </div>
   </body>
 </html>
