--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    <meta charset="utf-8" content="width=device-width" />
+    <script src="./src/d1341f9b7a.js"></script> 
+    <link rel="icon" href="./src/favicon.ico">
     <link rel="stylesheet" href="./src/Theodore.css" />
     <title>Theodore - Home</title>
   </head>
   <body>
+
+    <div class="hero">
+      <nav>
+        <h2><a href="./index.html" class="logo">Theodore</a></h2>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="" onclick="lazy()">About Me</a></li>
+            <li><a href="" onclick="lazy()">Other</a></li>
+          </ul>
+          <button type="button"> <a href="mailto:TheodoreTheFoxOwO@gmail.com">Contact</a></button>
+      </nav>
+    </div>
+
     <div class="box">
       <img
         src="./src/funnyahPhotos/me.png"
@@ -18,12 +32,14 @@
       <p>I enjoy making new friends. :3</p>
       <ul>
         <li>
-          <a href="https://twitter.com/TheodoreTheFox"
-            ><i class="fa fa-twitter-square" aria-hidden="true"></i
-          ></a>
+          <li><a href="https://github.com/Fox-Developments/"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+          <li><a href="https://twitter.com/TheodoreTheFox"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
         </li>
       </ul>
     </div>
   </body>
+
+  <script src="./src/app.js"></script>
+
 </html>
 <!-- a -->
