--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h2><a href="./index.html" class="logo">Theodore</a></h2>
           <ul>
             <li><a href="./index.html">Home</a></li>
+            <li><a href="./src/cuties.html">Cuties</a></li>
             <li><a href="" onclick="lazy()">About Me</a></li>
             <li><a href="" onclick="lazy()">Other</a></li>
           </ul>
