--- a/cuties.html
+++ b/cuties.html
@@ -9,9 +9,9 @@
 
     <div class="hero">
         <nav>
-          <h2><a href="../index.html" class="logo">Theodore</a></h2>
+          <h2><a href="./index" class="logo">Theodore</a></h2>
             <ul>
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="./index">Home</a></li>
             </ul>
         </nav>
     </div>
