--- a/cuties.html
+++ b/cuties.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./Theodore.css" />
+    <link rel="stylesheet" href="./src/Theodore.css" />
     <title>Theodore - Cuties</title>
   </head>
   <body>
