--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2><a href="./index" class="logo">Theodore</a></h2>
           <ul>
             <li><a href="./index">Home</a></li>
-            <li><a href="./src/cuties">Cuties</a></li>
+            <li><a href="./cuties">Cuties</a></li>
             <li><a href="" onclick="lazy()">About Me</a></li>
             <li><a href="" onclick="lazy()">Other</a></li>
           </ul>
