--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <h2><a href="./index" class="logo">Theodore</a></h2>
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="./cuties">Cuties</a></li>
             <li><a href="" onclick="lazy()">About Me</a></li>
             <li><a href="" onclick="lazy()">Other</a></li>
