--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="hero">
       <nav>
-        <h2><a href="./index" class="logo">Theodore</a></h2>
+        <h2><a href="/" class="logo">Theodore</a></h2>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="./cuties">Cuties</a></li>
