--- a/cuties.html
+++ b/cuties.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./src/Theodore.css" />
+    <link rel="icon" href="./src/favicon.ico">
     <title>Theodore - Cuties</title>
   </head>
   <body>
