--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" content="width=device-width" />
     <script src="./src/d1341f9b7a.js"></script> 
     <link rel="icon" href="./src/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon.ico">
     <link rel="stylesheet" href="./src/Theodore.css" />
     <title>Theodore - Home</title>
   </head>
