--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" content="width=device-width" />
     <script src="./src/d1341f9b7a.js"></script> 
     <link rel="icon" href="./src/favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="./src/favicon.ico">
     <link rel="stylesheet" href="./src/Theodore.css" />
     <title>Theodore - Home</title>
   </head>
@@ -19,7 +18,7 @@
             <li><a href="" onclick="lazy()">About Me</a></li>
             <li><a href="" onclick="lazy()">Other</a></li>
           </ul>
-          <button type="button"> <a href="mailto:TheodoreTheFoxOwO@gmail.com">Contact</a></button>
+          <button type="button"> <a href="mailto:mail@theodorethefox.ml">Contact</a></button>
       </nav>
     </div>
 
@@ -38,6 +37,9 @@
           <li><a href="https://twitter.com/TheodoreTheFox"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
         </li>
       </ul>
+    </div>
+    <div class="footer">
+      <footer></footer>
     </div>
   </body>
 
