--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" content="width=device-width" />
     <script src="./src/d1341f9b7a.js"></script> 
     <link rel="icon" href="./src/favicon.ico">
-    <link rel="stylesheet" href="./src/Theodore.css" />
+    <link rel="stylesheet" href="./src/main.css" />
     <title>Theodore - Home</title>
+
+    <meta content="TheodoreTheFox" property="og:title" />
+    <meta content="Cutie :3" property="og:description" />
+    <meta content="#5bb370" data-react-helmet="true" name="theme-color" />
+    <meta content="http://theodorethefox.ml/" property="og:url" />
+    <meta content="./src/favicon.ico" property="og:image" />
+
   </head>
   <body>
 
