--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/Theodore.css" />
+    <link rel="stylesheet" href="./src/main.css" />
     <link rel="icon" href="./src/favicon.ico">
-    <title>Theodore - 404</title>
+    <title>Page not found!</title>
   </head>
   <body>
     <div class="nopage">
