--- a/404.html
+++ b/404.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/main.css" />
+    <link rel="stylesheet" href="./src/css/404.css" />
     <link rel="icon" href="./src/favicon.ico">
     <title>Page not found!</title>
   </head>
   <body>
-    <div class="nopage">
-      <h1>404</h1>
-      <h5><strong>This page could not be found.</strong></h5>
-      <p><strong>Cutie :3</strong></p>
+    <div class="box">
+      <div class="nopage">
+        <h5><strong>Error 404</strong></h5>
+        <p><strong>Page Not Found</strong></p>
+      </div>
     </div>
   </body>
 </html>
