--- a/cuties.html
+++ b/cuties.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/cuties.css" />
+    <link rel="stylesheet" href="./src/css/cuties.css" />
     <link rel="icon" href="./src/favicon.ico">
     <title>Theodore - Cuties</title>
   </head>
@@ -18,10 +18,10 @@
     </div>
 
     <div class=cutie>
-        <img src="./src/funnyahPhotos/cuties/alex.png" alt="alex" style="width:10%; align-self: left;"></img>
+        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:10%; align-self: left;"></img>
         <h5>Alex</h5>
     <div class=cutie>
-        <img src="./src/funnyahPhotos/cuties/paup.png" alt="paup" style="width:10%; align-self: right;"></img>
+        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:10%; align-self: right;"></img>
         <h5>Paup</h5>
 
       <p><strong>Are Cuties :3</strong></p>
