--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="./src/css/main.css" />
     <title>Theodore - Home</title>
 
+    <meta content="TheodoreTheFox" property="og:site_name" />
     <meta content="TheodoreTheFox" property="og:title" />
-    <meta content="Cutie :3" property="og:description" />
-    <meta content="#5bb370" data-react-helmet="true" name="theme-color" />
+    <meta content="very amusing website. :D" property="og:description" />
     <meta content="http://theodorethefox.ml/" property="og:url" />
-    <meta content="./src/favicon.ico" property="og:image" />
-    <link rel="icon" href="./src/Images/me.png" type="image/x-icon" />
+    <meta content="./src/Images/me.png" property="og:image" />
 
   </head>
   <body>
