--- a/cuties.html
+++ b/cuties.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="./src/css/cuties.css" />
     <link rel="icon" href="./src/favicon.ico">
     <title>Theodore - Cuties</title>
+
+    <meta content="TheodoreTheFox" property="og:site_name" />
+    <meta content="TheodoreTheFox - Cuties" property="og:title" />
+    <meta content="very amusing website. :D" property="og:description" />
+    <meta content="http://theodorethefox.ml/cuties" property="og:url" />
+
   </head>
   <body>
 
