--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Theodore - Home</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
-    <meta content="TheodoreTheFox" property="og:title" />
+    <meta content="TheodoreTheFox - Home" property="og:title" />
     <meta content="very amusing website. :D" property="og:description" />
     <meta content="http://theodorethefox.ml/" property="og:url" />
     <meta content="./src/Images/me.png" property="og:image" />
