--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta content="TheodoreTheFox" property="og:site_name" />
     <meta content="TheodoreTheFox - Home" property="og:title" />
     <meta content="very amusing website. :D" property="og:description" />
-    <meta content="http://theodorethefox.ml" property="og:url" />
-    <meta content="./src/Images/me.png" property="og:image" />
+    <meta content="http://theodorethefox.ml/" property="og:url" />
 
   </head>
   <body>
