--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./src/css/404.css" />
-    <link rel="icon" href="./src/favicon.ico">
+    <link rel="icon" href="./src/favicon.ico" />
     <title>Page not found!</title>
   </head>
   <body>
