--- a/cuties.html
+++ b/cuties.html
@@ -22,15 +22,13 @@
             </ul>
         </nav>
     </div>
-
+    <div class="box">
+      <div class=cutie>
+        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:17%; align-self: left;"><h5>Alex</h5></img>
     <div class=cutie>
-        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:10%; align-self: left;"></img>
-        <h5>Alex</h5>
-    <div class=cutie>
-        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:10%; align-self: right;"></img>
-        <h5>Paup</h5>
-
-      <p><strong>Are Cuties :3</strong></p>
+        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:12%; align-self: right;"><h5>Paup</h5></img>
+        <p><strong>Are Cuties :3</strong></p>
+    </div>
     </div>
   </body>
 </html>
