--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="box">
       <img
-        src="./src/funnyahPhotos/me.png"
+        src="./src/Images/me.png"
         alt="ImCuteRight?"
         class="box-img"
       />
