--- a/cuties.html
+++ b/cuties.html
@@ -22,12 +22,12 @@
             </ul>
         </nav>
     </div>
+    <p><strong>Cuties :3</strong></p>
     <div class="box">
       <div class=cutie>
-        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:17%; align-self: left;"><h5>Alex</h5></img>
-    <div class=cutie>
-        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:12%; align-self: right;"><h5>Paup</h5></img>
-        <p><strong>Are Cuties :3</strong></p>
+        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:22%; align-self: left;"><h5>Alex</h5></img>
+      <div class=cutie>
+        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:20%; align-self: right;"><h5> Paup</h5></img>
     </div>
     </div>
   </body>
