--- a/cuties.html
+++ b/cuties.html
@@ -23,12 +23,34 @@
         </nav>
     </div>
     <p><strong>Cuties :3</strong></p>
-    <div class="box">
+    <!-- <div class="box">
       <div class=cutie>
         <img src="./src/Images/cuties/alex.png" alt="alex" style="width:22%; align-self: left;"><h5>Alex</h5></img>
       <div class=cutie>
         <img src="./src/Images/cuties/paup.png" alt="paup" style="width:20%; align-self: right;"><h5> Paup</h5></img>
+    </div> -->
+
+    <div class="box">
+      <img
+        src="./src/Images/cuties/paup.png"
+        alt="paup"
+        class="box-img"
+      />
+      <h1>Paup</h1>
+      <p>Cutie</p>
     </div>
+
+    <div class="box">
+      <img
+        src="./src/Images/cuties/alex.png"
+        alt="Alex"
+        class="box-img"
+      />
+      <h1>Theodore</h1>
+      <p>Cutie</p>
+    </div>
+
+
     </div>
   </body>
 </html>
