--- a/cuties.html
+++ b/cuties.html
@@ -23,12 +23,6 @@
         </nav>
     </div>
     <p><strong>Cuties :3</strong></p>
-    <!-- <div class="box">
-      <div class=cutie>
-        <img src="./src/Images/cuties/alex.png" alt="alex" style="width:22%; align-self: left;"><h5>Alex</h5></img>
-      <div class=cutie>
-        <img src="./src/Images/cuties/paup.png" alt="paup" style="width:20%; align-self: right;"><h5> Paup</h5></img>
-    </div> -->
 
     <div class="box">
       <img
@@ -36,8 +30,8 @@
         alt="paup"
         class="box-img"
       />
-      <h1>Paup</h1>
-      <p>Cutie</p>
+      <h1><Strong>Paup</Strong></h1>
+      <p><Strong>Cutie</Strong></p>
     </div>
 
     <div class="box">
@@ -46,8 +40,8 @@
         alt="Alex"
         class="box-img"
       />
-      <h1>Theodore</h1>
-      <p>Cutie</p>
+      <h1><Strong>Alex</Strong></h1>
+      <p><Strong>Cutie</Strong></p>
     </div>
 
 
