--- a/cuties.html
+++ b/cuties.html
@@ -12,16 +12,19 @@
     <meta content="http://theodorethefox.ml/cuties" property="og:url" />
 
   </head>
+
   <body>
 
-    <div class="hero">
+    <!-- <div class="hero">
         <nav>
           <h2><a href="/" class="logo">Theodore</a></h2>
             <ul>
               <li><a href="/">Home</a></li>
             </ul>
         </nav>
-    </div>
+    </div> -->
+    <script id="replace_with_navbar" src="./src/nav.js"></script>
+
     <p><strong>Cuties :3</strong></p>
 
     <div class="box">
