--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <meta content="http://theodorethefox.ml/" property="og:url" />
 
   </head>
+
   <body>
 
-    <div class="hero">
+    <!-- <div class="hero">
       <nav>
         <h2><a href="/" class="logo">Theodore</a></h2>
           <ul>
@@ -26,7 +27,8 @@
           </ul>
           <button type="button"> <a href="mailto:mail@theodorethefox.ml">Contact</a></button>
       </nav>
-    </div>
+    </div> -->
+    <script id="replace_with_navbar" src="./src/nav.js"></script>
 
     <div class="box">
       <img
