Nav Fixed | TSconfig

--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -9,8 +9,9 @@
           <li><a href="/">Home</a></li>
           <li><a href="./cuties">Cuties</a></li>
           <li><a href="" onclick="lazy()">About Me</a></li>
-          <li><a href="" onclick="lazy()">Other</a></li>
+          <li><a href="" onclick="lazyer()">Other</a></li>
         </ul>
         <button type="button"> <a href="mailto:mail@theodorethefox.ml">Contact</a></button>
     </nav>
-  </div>
+</div>
+  
