--- a/cuties.html
+++ b/cuties.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </div> -->
-    <script id="replace_with_navbar" src="./src/nav.js"></script>
+    <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <p><strong>Cuties :3</strong></p>
 
@@ -51,6 +51,6 @@
     </div>
   </body>
 
-  <script src="./src/app.js"></script>
+  <script src="./src/JavaScript/app.js"></script>
 
 </html>
