--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="width=device-width" />
-    <script src="./src/d1341f9b7a.js"></script> 
+    <script src="./src/other/d1341f9b7a.js"></script> 
     <link rel="icon" href="./src/favicon.ico">
     <link rel="stylesheet" href="./src/css/main.css" />
     <title>Theodore - Home</title>
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <script id="replace_with_navbar" src="./src/nav.js"></script>
+    <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <div class="box">
       <img
@@ -38,6 +38,6 @@
     </div>
   </body>
 
-  <script src="./src/app.js"></script>
+  <script src="./src/JavaScript/app.js"></script>
 
 </html>
