Typescript Is So Cool | Other

--- a/cuties.html
+++ b/cuties.html
@@ -29,21 +29,23 @@
 
     <div class="box">
       <img
-        src="./src/Images/cuties/paup.png"
+        id="Paup"
         alt="paup"
         class="box-img"
       />
-      <h1><Strong>Paup</Strong></h1>
+      <h1><Strong>Pauplogini</Strong></h1>
+      <h2 class="owo"></h2>
       <p><Strong>Cutie</Strong></p>
     </div>
 
     <div class="box">
       <img
-        src="./src/Images/cuties/alex.png"
+        id="Alex"
         alt="Alex"
         class="box-img"
       />
       <h1><Strong>Alex</Strong></h1>
+      <h2 class="owo"></h2>
       <p><Strong>Cutie</Strong></p>
     </div>
 
@@ -51,6 +53,6 @@
     </div>
   </body>
 
-  <script src="./src/JavaScript/app.js"></script>
+  <script src="./src/JavaScript/cuties.js"></script>
 
 </html>
