--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </div>
   </body>
 
-  <script src="./src/JavaScript/app.js"></script>
+  <script src="./src/JavaScript/theo.js"></script>
+
+  <link rel="stylesheet" href="./src/css/nav.css" />
 
 </html>
