--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       />
       <h1>Theodore</h1>
       <h5>Web Devloper - Discord User</h5>
-      <p>I enjoy making new friends. :3</p>
+      <p>I enjoy making new friends. =w=</p>
       <ul>
         <li>
           <li><a href="https://github.com/Fox-Developments/"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
@@ -34,12 +34,12 @@
       </ul>
     </div>
     <div class="footer">
+
       <footer></footer>
     </div>
   </body>
 
   <script src="./src/JavaScript/theo.js"></script>
-
   <link rel="stylesheet" href="./src/css/nav.css" />
 
 </html>
