--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -1,11 +1,11 @@
-<div class="hero">
+<div>
     <nav>
       <h2><a href="/" class="logo">Theodore</a></h2>
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="./cuties">Cuties</a></li>
-          <li><a href="" onclick="lazy()">About Me</a></li>
-          <li><a href="" onclick="lazyer()">Other</a></li>
+          <li><a onclick="lazy()">About Me</a></li>
+          <li><a onclick="lazyer()">Other</a></li>
         </ul>
         <button type="button"> <a href="mailto:mail@theodorethefox.ml">Contact</a></button>
     </nav>
