--- a/404.html
+++ b/404.html
@@ -7,11 +7,13 @@
     <title>Page not found!</title>
   </head>
   <body>
-    <div class="box">
+    <div class="">
       <div class="nopage">
         <h5><strong>Error 404</strong></h5>
+        <div class=""></div>
         <p><strong>Page Not Found</strong></p>
       </div>
     </div>
   </body>
+  <link rel="stylesheet" href="src/css/sidebar.css">
 </html>
