--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -7,7 +7,7 @@
           <li><a onclick="lazy()">About Me</a></li>
           <li><a onclick="lazyer()">Other</a></li>
         </ul>
-        <button type="button"> <a href="mailto:mail@theodorethefox.ml">Contact</a></button>
+        <button type="button"> <a href="mailto: admin@theodorethefox.ml">Contact</a></button>
     </nav>
 </div>
   
