--- a/cuties.html
+++ b/cuties.html
@@ -17,8 +17,7 @@
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <p><strong>Cuties :3</strong></p>
-
-    <div class="box">
+    <div class="box" id="Right" >
       <img
         id="Paup"
         alt="paup"
@@ -29,7 +28,7 @@
       <p><Strong>Cutie</Strong></p>
     </div>
 
-    <div class="box">
+    <div class="box" id="Left">
       <img
         id="Alex"
         alt="Alex"
@@ -39,13 +38,12 @@
       <h2 class="owo"></h2>
       <p><Strong>Cutie</Strong></p>
     </div>
-
-
     </div>
   </body>
 
   <script src="./src/JavaScript/cuties.js"></script>
 
   <link rel="stylesheet" href="./src/css/nav.css" />
-
+  
+  <link rel="stylesheet" href="./src/css/sidebar.css">
 </html>
