--- a/home.html
+++ b/home.html
@@ -42,4 +42,5 @@
   <script src="./src/JavaScript/theo.js"></script>
   <link rel="stylesheet" href="./src/css/nav.css" />
 
+  <link rel="stylesheet" href="./src/css/sidebar.css">
 </html>
