--- a/cuties.html
+++ b/cuties.html
@@ -14,6 +14,9 @@
   </head>
 
   <body>
+
+    <script src="./src/JavaScript/theo.js"></script>
+
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <p><strong>Cuties :3</strong></p>
