ghbjmbmnjkn j,njknmkj,nkj,m

--- a/cuties.html
+++ b/cuties.html
@@ -20,33 +20,37 @@
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <p><strong>Cuties :3</strong></p>
-    <div class="box" id="Right" >
-      <img
-        id="Paup"
-        alt="paup"
-        class="box-img"
-      />
-      <h1><Strong>Pauplogini</Strong></h1>
-      <h2 class="owo"></h2>
-      <p> <Strong>Cutie</Strong> </p>
+    <h2 class="owos"></h2>
+    <div>
+      <div class="box" id="Right" >
+        <img
+          id="Paup"
+          alt="paup"
+          class="box-img"
+        />
+        <h1><Strong>Pauplogini</Strong></h1>
+        <h2 class="owo"></h2>
+        <p> <Strong>Cutie</Strong> </p>
+      </div>
+  
+      <div class="box" id="Left">
+        <img
+          id="Alex"
+          alt="Alex"
+          class="box-img"
+        />
+        <h1><Strong>Alex</Strong></h1>
+        <h2 class="owo"></h2>
+        <p><Strong>Cutie</Strong></p>
+      </div>
     </div>
 
-    <div class="box" id="Left">
-      <img
-        id="Alex"
-        alt="Alex"
-        class="box-img"
-      />
-      <h1><Strong>Alex</Strong></h1>
-      <h2 class="owo"></h2>
-      <p><Strong>Cutie</Strong></p>
-    </div>
-    </div>
+    <script id="replace_with_bg" src="./src/JavaScript/bg.js"></script>
   </body>
 
   <script src="./src/JavaScript/cuties.js"></script>
 
   <link rel="stylesheet" href="./src/css/nav.css" />
-  
+  <link rel="stylesheet" href="./src/css/bg.css">
   <link rel="stylesheet" href="./src/css/sidebar.css">
 </html>
