--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   </head>
 
+  <link rel="stylesheet" href="./src/css/bg.css">
   <link rel="stylesheet" href="./src/css/main.css" />
+
 
   <body>
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
@@ -38,6 +40,9 @@
 
       <footer></footer>
     </div>
+
+    <script id="replace_with_bg" src="./src/JavaScript/bg.js"></script>
+
   </body>
 
   <script src="./src/JavaScript/theo.js"></script>
