--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -2,10 +2,10 @@
     <nav>
       <h2><a href="/" class="logo">Theodore</a></h2>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="./cuties">Cuties</a></li>
-          <li><a onclick="lazy()">About Me</a></li>
-          <li><a onclick="lazyer()">Other</a></li>
+          <li><a data-active="home" href="/">Home</a></li>
+          <li><a data-active="cuties" href="./cuties">Cuties</a></li>
+          <li><a data-active="aboutme" href="./aboutme">About Me</a></li>
+          <li><a data-active="other" onclick="lazyer()">Other</a></li>
         </ul>
         <button type="button"> <a href="mailto: admin@theodorethefox.ml">Contact</a></button>
     </nav>
