--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -4,8 +4,7 @@
         <ul>
           <li><a data-active="home" href="/">Home</a></li>
           <li><a data-active="cuties" href="./cuties">Cuties</a></li>
-          <li><a data-active="aboutme" href="./aboutme">About Me</a></li>
-          <li><a data-active="other" onclick="lazyer()">Other</a></li>
+          <li><a data-active="aboutme" href="./about">About Me</a></li>
         </ul>
         <button type="button"> <a href="mailto: admin@theodorethefox.ml">Contact</a></button>
     </nav>
