--- a/index.html
+++ b/index.html
@@ -2,51 +2,50 @@
 <html>
   <head>
     <meta charset="utf-8" content="width=device-width" />
-    <script src="./src/other/d1341f9b7a.js"></script> 
-    <link rel="icon" href="./src/favicon.ico">
+    <script src="./src/other/d1341f9b7a.js"></script>
+    <link rel="icon" href="./src/favicon.ico" />
     <title>Theodore - Home</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
     <meta content="TheodoreTheFox - Home" property="og:title" />
     <meta content="very amusing website. :D" property="og:description" />
     <meta content="http://theodorethefox.ml/" property="og:url" />
-
   </head>
 
-  <link rel="stylesheet" href="./src/css/bg.css">
   <link rel="stylesheet" href="./src/css/main.css" />
-
+  <script src="./src/JavaScript/theo.js"></script>
 
   <body>
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <div class="box">
-      <img
-        src="./src/Images/me.png"
-        alt="ImCuteRight?"
-        class="box-img"
-      />
+      <img src="https://tr.rbxcdn.com/47ecedf835e6b8af513112ab47fae645/150/150/AvatarHeadshot/Png" alt="ImCuteRight?" class="box-img"></img>
+
       <h1>Theodore</h1>
       <h5>Web Devloper - Discord User</h5>
       <p>I enjoy making new friends. =w=</p>
       <ul>
-        <li>
-          <li><a href="https://github.com/Fox-Developments/"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-          <li><a href="https://twitter.com/TheodoreTheFox"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-        </li>
+        <div class="Buttons">
+          <li>
+            <a href="https://github.com/Fox-Developments/"
+              ><i class="fa fa-github-square" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/TheodoreTheFox"
+              ><i class="fa fa-twitter-square" aria-hidden="true"></i
+            ></a>
+          </li>
+        </div>
       </ul>
     </div>
     <div class="footer">
-
       <footer></footer>
     </div>
-
-    <script id="replace_with_bg" src="./src/JavaScript/bg.js"></script>
-
   </body>
 
   <script src="./src/JavaScript/theo.js"></script>
   <link rel="stylesheet" href="./src/css/nav.css" />
 
-  <link rel="stylesheet" href="./src/css/sidebar.css">
+  <link rel="stylesheet" href="./src/css/sidebar.css" />
 </html>
