--- a/cuties.html
+++ b/cuties.html
@@ -21,7 +21,7 @@
 
     <p><strong>Cuties :3</strong></p>
     <h2 class="owos"></h2>
-    <div>
+    <div class="center">
       <div class="box" id="Right" >
         <img
           id="Paup"
