--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
 
     <div class="box">
-      <img src="https://tr.rbxcdn.com/47ecedf835e6b8af513112ab47fae645/150/150/AvatarHeadshot/Png" alt="ImCuteRight?" class="box-img"></img>
+      <img src="./src/Images/me.png" alt="ImCuteRight?" class="box-img"></img>
 
       <h1>Theodore</h1>
       <h5>Web Devloper - Discord User</h5>
