--- a/404.html
+++ b/404.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/css/404.css" />
-    <link rel="icon" href="./src/favicon.ico" />
+    <link rel="stylesheet" href="https://theodorethefox.ml/src/css/404.css" />
     <title>Page not found!</title>
   </head>
   <body>
