--- a/about/index.html
+++ b/about/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" content="width=device-width" />
-        <link rel="icon" href="./src/favicon.ico">
+        <link rel="icon" href="/./src/favicon.ico">
         <title>Theodore - About Me</title>
-        <link rel="stylesheet" href="./src/css/aboutme.css">
+        <link rel="stylesheet" href="/./src/css/aboutme.css">
 
         <meta content="TheodoreTheFox" property="og:site_name" />
         <meta content="TheodoreTheFox - About Me" property="og:title" />
