--- a/cuties/index.html
+++ b/cuties/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/css/cuties.css" />
-    <link rel="icon" href="./src/favicon.ico">
+    <link rel="stylesheet" href="/./src/css/cuties.css" />
+    <link rel="icon" href="/./src/favicon.ico">
     <title>Theodore - Cuties</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
