--- a/about/index.html
+++ b/about/index.html
@@ -14,13 +14,13 @@
     <body>    
         <div class="wrapper">
 
-            <script src="./src/JavaScript/theo.js"></script>
-            <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
+            <script src="/./src/JavaScript/theo.js"></script>
+            <script id="replace_with_navbar" src="/./src/JavaScript/nav.js"></script>
 
             <div class="hmm">
                 <article>
                     <h1>About Me</h1>
-                    <img src="./src/Images/me.png" alt="ImCuteRight??">
+                    <img src="/./src/Images/me.png" alt="ImCuteRight??">
                     <h2><strong>^w^</strong></h2>
                     <blockquote>
                         Hello, my name is Theodore, and I enjoy making new friends and playing games.
@@ -29,5 +29,5 @@
             </div>
         </div>
     </body>
-    <link rel="stylesheet" href="./src/css/nav.css" />
+    <link rel="stylesheet" href="/./src/css/nav.css" />
 </html>
