--- a/cuties/index.html
+++ b/cuties/index.html
@@ -15,9 +15,9 @@
 
   <body>
 
-    <script src="./src/JavaScript/theo.js"></script>
+    <script src="/./src/JavaScript/theo.js"></script>
 
-    <script id="replace_with_navbar" src="./src/JavaScript/nav.js"></script>
+    <script id="replace_with_navbar" src="/./src/JavaScript/nav.js"></script>
 
     <p><strong>Cuties :3</strong></p>
     <h2 class="owos"></h2>
@@ -42,9 +42,9 @@
     </div>
   </body>
 
-  <script src="./src/JavaScript/cuties.js"></script>
+  <script src="/./src/JavaScript/cuties.js"></script>
 
-  <link rel="stylesheet" href="./src/css/nav.css" />
-  <link rel="stylesheet" href="./src/css/bg.css">
-  <link rel="stylesheet" href="./src/css/sidebar.css">
+  <link rel="stylesheet" href="/./src/css/nav.css" />
+  <link rel="stylesheet" href="/./src/css/bg.css">
+  <link rel="stylesheet" href="/./src/css/sidebar.css">
 </html>
