--- a/src/html/nav.html
+++ b/src/html/nav.html
@@ -3,9 +3,9 @@
       <h2><a href="/" class="logo">Theodore</a></h2>
         <ul>
           <li><a data-active="home" href="/">Home</a></li>
-          <li><a data-active="cuties" href="/cuties/index.html">Cuties</a></li> 
+          <li><a data-active="cuties" href="/cuties">Cuties</a></li> 
           <!-- was ./cuties -->
-          <li><a data-active="aboutme" href="https://theodorethefox.ml/about">About Me</a></li>
+          <li><a data-active="aboutme" href="/about">About Me</a></li>
           <!-- was ./about -->
         </ul>
         <button type="button"> <a href="mailto: admin@theodorethefox.ml">Contact</a></button>
