--- a/cuties/index.html
+++ b/cuties/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
+<style>
+  body {
+    background-image: linear-gradient(#eb7c22, #ff9f51);
+  }
+  article img {
+    height: 200px;
+    width: 200px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    margin-top: 60px;
+  }
+</style>
 <html>
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/./src/css/cuties.css" />
-    <link rel="icon" href="/./src/favicon.ico">
+    <link rel="icon" href="/./src/favicon.ico" />
     <title>Theodore - Cuties</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
     <meta content="TheodoreTheFox - Cuties" property="og:title" />
     <meta content="very amusing website. :D" property="og:description" />
     <meta content="http://theodorethefox.ml/cuties" property="og:url" />
-
   </head>
 
   <body>
-
     <script src="/./src/JavaScript/theo.js"></script>
 
     <script id="replace_with_navbar" src="/./src/JavaScript/nav.js"></script>
@@ -22,22 +32,14 @@
     <p><strong>Cuties :3</strong></p>
     <h2 class="owos"></h2>
     <div class="center">
-      <div class="box" id="Right" >
-        <img
-          id="Paup"
-          alt="paup"
-          class="box-img"
-        />
-        <h1><Strong>Pauplogini</Strong></h1>
+      <div class="box" id="Right">
+        <img src="/./src/Images/cuties/paup.png" alt="paup" class="box-img" />
+        <h1><strong>Pauplogini</strong></h1>
       </div>
-  
+
       <div class="box" id="Left">
-        <img
-          id="Alex"
-          alt="Alex"
-          class="box-img"
-        />
-        <h1><Strong>Alex</Strong></h1>
+        <img src="/./src/Images/cuties/alex.png" alt="Alex" class="box-img" />
+        <h1><strong>Alex</strong></h1>
       </div>
     </div>
   </body>
@@ -45,6 +47,6 @@
   <script src="/./src/JavaScript/cuties.js"></script>
 
   <link rel="stylesheet" href="/./src/css/nav.css" />
-  <link rel="stylesheet" href="/./src/css/bg.css">
-  <link rel="stylesheet" href="/./src/css/sidebar.css">
+  <link rel="stylesheet" href="/./src/css/bg.css" />
+  <link rel="stylesheet" href="/./src/css/sidebar.css" />
 </html>
