--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<style>
+    body {
+      background-image: linear-gradient(#eb7c22, #ff9f51);
+    }
+    article img {
+      height: 200px;
+      width: 200px;
+      border: 8px solid #fff;
+      border-radius: 50%;
+      margin-top: 60px;
+    }
+  </style>
 <html>
     <head>
         <meta charset="utf-8" content="width=device-width" />
