--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" content="width=device-width" />
-    <script src="./public/d1341f9b7a.js"></script>
-    <link rel="icon" href="./public/favicon.ico" />
+    <script src="./pub/d1341f9b7a.js"></script>
+    <link rel="icon" href="./pub/favicon.ico" />
     <title>Theodore - Home</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
