--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <html>
     <head>
         <meta charset="utf-8" content="width=device-width" />
-        <link rel="icon" href="/./public/favicon.ico" />
+        <link rel="icon" href="/./pub/favicon.ico" />
         <title>Theodore - About Me</title>
         <link rel="stylesheet" href="/./src/css/aboutme.css">
 
