--- a/cuties/index.html
+++ b/cuties/index.html
@@ -15,7 +15,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/./src/css/cuties.css" />
-    <link rel="icon" href="/./public/favicon.ico" />
+    <link rel="icon" href="/./pub/favicon.ico" />
     <title>Theodore - Cuties</title>
 
     <meta content="TheodoreTheFox" property="og:site_name" />
