--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
       <div class="nopage">
         <h5><strong>Error 404</strong></h5>
         <div class=""></div>
-        <p><strong>Page Not Found</strong></p>
+        <p><strong>Oops, we cant find the page you're looking for</strong></p>
       </div>
     </div>
   </body>
